; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/protocols/modbus_slave/main/extr_freemodbus.c_setup_reg_data.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/protocols/modbus_slave/main/extr_freemodbus.c_setup_reg_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, i32, i32 }
%struct.TYPE_6__ = type { double, double, double, double }
%struct.TYPE_8__ = type { i32, i32, i32, i32, i32 }
%struct.TYPE_5__ = type { double, double, double, double }

@discrete_reg_params = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@holding_reg_params = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@coil_reg_params = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@input_reg_params = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_reg_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_reg_data() #0 {
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @discrete_reg_params, i32 0, i32 0), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @discrete_reg_params, i32 0, i32 1), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @discrete_reg_params, i32 0, i32 2), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @discrete_reg_params, i32 0, i32 3), align 4
  store double 1.340000e+00, double* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @holding_reg_params, i32 0, i32 0), align 8
  store double 2.560000e+00, double* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @holding_reg_params, i32 0, i32 1), align 8
  store double 3.780000e+00, double* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @holding_reg_params, i32 0, i32 2), align 8
  store double 4.900000e+00, double* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @holding_reg_params, i32 0, i32 3), align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @coil_reg_params, i32 0, i32 0), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @coil_reg_params, i32 0, i32 1), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @coil_reg_params, i32 0, i32 2), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @coil_reg_params, i32 0, i32 3), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @coil_reg_params, i32 0, i32 4), align 4
  store double 1.340000e+00, double* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @input_reg_params, i32 0, i32 0), align 8
  store double 2.560000e+00, double* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @input_reg_params, i32 0, i32 1), align 8
  store double 3.780000e+00, double* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @input_reg_params, i32 0, i32 2), align 8
  store double 4.900000e+00, double* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @input_reg_params, i32 0, i32 3), align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
